doesNotHaveEmptyValues supports records